@@ -2,6 +2,11 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+Fix memory overrun errors.
+---
+gtk-v2/src/stats.c: Allocate enough skill boxes to store MAX_SKILL skills.
+Andreas Kirschbaum 2007-04-23
+
 autogen.sh: Add script to rebuild autoconf files.
 configure, aclocal.m4, */Makefile.in: Rebuilt.
 common/Makefile.am: Rewrite commands to build svnversion.h to not generate an
